# advanced-image-editor

./: .gitignore  LICENSE  OSS_LICENSES.md  README.md  README_OLD.md  VERIFICATION_GUIDE.md  advanced-image-editor.code-workspace  build_and_copy.sh  main.py  pyproject.toml  requirements.txt  setup.py  simple-workspace.code-workspace
.github/: CODEOWNERS
.github/workflows/: docs_automation.yml  internal-pypi-governance.yml  oss_licenses.yml  pr_gate.yml  qa_gate.yml
.venv_aid/: pyvenv.cfg
config/: plugin_order.json
contracts/: __init__.py
contracts/api/: __init__.py  experiment_api.py  image_processing_api.py
contracts/schemas/: __init__.py  experiment.py  image_processing.py
data/: README.md  __init__.py
data/db/: advanced_image_editor.duckdb  database_schema.py  test.duckdb
docs/: ARCHITECTURE.md  CODE_MODIFICATION_CHECKLIST.md  CROSS_PLATFORM_GUIDE.md  DESIGN_PRINCIPLES.md  DEVELOPER_GUIDE.md  INDEX.md  LIBRARY_GUIDE.md  PLUGIN_GUIDE.md  PROPOSED_README.md  SMART_SLIDER_GUIDE.md  TECHNICAL_NOTES.md  USER_GUIDE.md
docs/architecture/: ARCHITECTURE.md  LIBRARY_GUIDE.md  TECHNICAL_NOTES.md
docs/dev/: CODE_MODIFICATION_CHECKLIST.md  DEVELOPER_GUIDE.md  PLUGIN_GUIDE.md
docs/draft/: PROPOSED_README.md
docs/guide/: CROSS_PLATFORM_GUIDE.md  USER_GUIDE.md  VERIFICATION_GUIDE.md
lib/gui_framework/: __init__.py
scripts/: README.md  build_distribution.py  comprehensive_verification.py  setup_dev_environment.py  test_phase1_integration.py  verify_phase0.py
scripts/experiments/: experiment_framework.py
src/: advanced_image_editor.py  main.py  main_plugin.py  main_plugin.py.old  verify_design_reliability.py
src/core/: __init__.py  logging.py  plugin_base.py  universal_plugin_base.py
src/editor/: __init__.py  image_editor.py
src/plugins/advanced/: __init__.py  advanced_plugin.py
src/plugins/analysis/: __init__.py  analysis_plugin.py  blur_plugin.py  histogram_analysis_plugin.py  noise_plugin.py  plugin.json
src/plugins/analysis_universal/: plugin.json  plugin.py
src/plugins/basic/: __init__.py  basic_plugin.py  plugin.json  presenter.py
src/plugins/basic_universal/: __init__.py  plugin.json  plugin.py
src/plugins/basic_v2/: plugin.json
src/plugins/density/: __init__.py  density_plugin.py  plugin.json  presenter.py
src/plugins/density_universal/: __init__.py  plugin.json  plugin.py
src/plugins/filters/: __init__.py  filters_plugin.py  plugin.json  presenter.py
src/plugins/filters_universal/: plugin.json  plugin.py
src/plugins/super_resolution/: README.md  examples.py  super_resolution_standalone.py
src/ui/: __init__.py  curve_editor.py  main_window.py
src/utils/: __init__.py  image_utils.py  platform_utils.py  slider_utils.py  smart_slider.py
super_resolution/: README.md  super_resolution_requirements.txt  super_resolution_standalone.py
