[project]
name = "advanced-image-editor"
version = "1.0.0"
description = "Advanced Image Editor with Plugin System - Cross-Platform Compatible"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TITManagement", email = "contact@titmanagement.com"}
]
keywords = ["image-editor", "plugins", "opencv", "customtkinter", "cross-platform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Editors",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "customtkinter>=5.2.0",
    "darkdetect>=0.8.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "packaging>=23.0",
]

[project.urls]
Homepage = "https://github.com/TITManagement/advanced-image-editor"
Repository = "https://github.com/TITManagement/advanced-image-editor"
Issues = "https://github.com/TITManagement/advanced-image-editor/issues"

[project.scripts]
advanced-image-editor = "src.main_plugin:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.jpeg", "*.jpg", "*.png"]

# Cross-platform compatibility settings
[tool.setuptools]
platforms = ["any"]